--- a/license-server/package.json
+++ b/license-server/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-  },
+  "start": "node index.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "dependencies": {
     "@supabase/supabase-js": "^2.96.0",
     "cors": "^2.8.6",
