--- a/license-server/package.json
+++ b/license-server/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "start": "node index.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.96.0",
     "cors": "^2.8.6",
@@ -13,8 +15,5 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "node-fetch": "^3.3.2"
-  },
-  "engines": {
-    "node": "18.x"
   }
 }
